--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -21,6 +21,7 @@ body {
   background-color: #fff;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
 }
 
 a {
