--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -25,9 +25,12 @@ body {
 }
 
 a {
+  color: #6E7173;
   text-decoration: none;
-  color: inherit;
   transition: all .1s ease-in;
+}
+a:hover {
+  color: #444;
 }
 
 ul,
